[package]
name = "si_units"
version = "0.1.2"
edition = "2021"
description = "A crate for handling arithmetic with SI units"
readme = "README.md"
repository = "https://github.com/MagicPotatoBean/si"
license = "MIT OR Apache-2.0"
keywords = ["SI", "physics"]
categories = ["mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prse = "1.2.0"